--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,2 +1,14 @@
  <h1>Create Listing</h1>
- <%= render 'form'%>
+<%= form_for @listing do |f| %>
+
+	<%= render partial: 'listings/form', object: f %>
+
+	<%= f.fields_for :tags do |x| %>
+		<%= x.label :property_type%>
+		<%= x.select :property_type, ['Villa', 'Apartment', 'Room'], :include_blank => true %>
+	<% end %>
+	
+	<div class="submit-field">
+      <%= f.submit "Create NEW..."%>
+    </div>
+<% end %>
